# pylibjpeg-turbo

./: .gitignore  CONTRIBUTING.md  LICENSE.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: wheels.yml
src/pylibjpeg-turbo/: __init__.py  main.py
tests/: test_jpeg_file.py
