# pyproject.toml
# py-build-cmake help from https://github.com/tttapa/py-build-cmake/issues/16

[build-system]
requires = ["py-build-cmake~=0.1.9a3"]
build-backend = "py_build_cmake.build"


# --------------- Project  -------------------
[project]
name = "pylibjpeg-turbo"
readme = "README.md"
requires-python = ">=3.9"
license = { "file" = "LICENSE" }
authors = [{ name = "Darcy Mason", email = "darcymason@gmail.com" }]
version = "0.1.0"
description = "libjpeg-turbo wrapper, primarily for pydicom plugin"
# see https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: BSD License",
]

dependencies = [
   "PyTurboJPEG"
]

[project.urls]
Source = "https://github.com/pydicom/pylibjpeg-turbo"

[project.optional-dependencies]
dev = [
    "black",
    "flit",
    "keyring",
    "pre-commit",
    "ruff",
]
docs = [
    "mkdocs",
    "mkdocstrings[python]",
]
test = [
    "pytest >=4.0.0",
    "pytest-cov",
    "pytest-icdiff",
]

[project.entry-points."pylibjpeg.pixel_data_decoders"]
"1.2.840.10008.1.2.4.50" = "pylibjpeg_turbo:decode_pixel_data"
"1.2.840.10008.1.2.4.51" = "pylibjpeg_turbo:decode_pixel_data"
"1.2.840.10008.1.2.4.57" = "pylibjpeg_turbo:decode_pixel_data"
"1.2.840.10008.1.2.4.70" = "pylibjpeg_turbo:decode_pixel_data"
"1.2.840.10008.1.2.4.80" = "pylibjpeg_turbo:decode_pixel_data"
"1.2.840.10008.1.2.4.81" = "pylibjpeg_turbo:decode_pixel_data"

[project.entry-points."pylibjpeg.jpeg_decoders"]
pylibjpeg_turbo = "pylibjpeg_turbo:decode"

[project.entry-points."pylibjpeg.jpeg_ls_decoders"]
pylibjpeg_turbo = "pylibjpeg_turbo:decode"

[project.entry-points."pylibjpeg.jpeg_xt_decoders"]
pylibjpeg_turbo = "pylibjpeg_turbo:decode"


# --------------- cmake / build  -------------------
[tool.py-build-cmake.sdist]
include = ["CMakeLists.txt", "extern/libjpeg-turbo"]

[tool.py-build-cmake.cmake]
minimum_version = "3.17"
build_type = "RelWithDebInfo"
build_args = ["-j"]
install_components = ["shlib"]
abi = 'none'

[tool.cibuildwheel]
build-verbosity = 1
environment = { PY_BUILD_CMAKE_VERBOSE="1" }
